--- a/FlappyBirdGame.html
+++ b/FlappyBirdGame.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Monsters Inc</title>
+    <title>Monster Dash</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <style>
         body
