--- a/FlappyBirdGame.html
+++ b/FlappyBirdGame.html
@@ -5,21 +5,29 @@
     <title>Monster Dash</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <style>
-        body
+        /*body
         {
-            display: flex;
-        }
+           display: flex;
+        }*/
         canvas
         {
             margin: 0 auto;
+            display: block;
+        }
+        button
+        {
+            margin: 0 auto;
+            display: block;
         }
     </style>
 </head>
 <body onload="main()">
 
-<div id = "wrapper"></div>
+Current Score<div id="score"></div>
+High Score<div id="highscore"></div>
 
 </body>
+<button onclick="restart()">Start New Game</button>
 <script src="Javascript/main.js"></script>
 <script src="Javascript/spritesheet.js"></script>
 </html>
